# safer_ffi

./: .git-blame-ignore-revs  .gitignore  .gitmodules  .gitrepo  .rustfmt.toml  404.html  Cargo.toml  LICENSE  README.md  build.rs  index.html  links.md.template  print.html  rust-toolchain.toml  searchindex.js  searchindex.json
.cargo/: config  config.toml
.github/workflows/: CI.yml  gh-pages.yml
appendix/: c-compilation.html  how-does-safer_ffi-work.html
callbacks/: _.html  closures.html  fn_pointers.html
derive-reprc/: _.html  enum.html  struct.html
docs/: index.html  prerequisites.html  print.html  searchindex.js  searchindex.json
docs/css/: variables.css
docs/derive-reprc/: _.html  repr-c-struct.html  repr-int-enum.html
docs/ditto/: _.html
docs/ffi-export/: _.html
docs/hashmap-example/: _.html
docs/introduction/: _.html
docs/motivation/: _.html  cbindgen.html  repr-c-forall.html
docs/theme/: additional-css.css
docs/usage/: _.html
dotnet_experiments/: Program.cs  foo.sln
dotnet_experiments/foo/: Program.cs  foo.csproj  librust_lib.dylib
dotnet_experiments/rust-lib/: Cargo.toml
dyn_traits/: _.html  derive_reprc_dyn.html  futures.html  virtual_ptr.html
example-ditto/: _.html
example-hashmap/: _.html
examples/point/: Cargo.toml  Makefile  main.c  rust_points.h
ffi-export/: _.html  attributes.html  sanity-checks.html
ffi_tests/: .gitignore  Cargo.toml  Makefile  generated.cffi  generated.cs  generated.h  generated.lua
ffi_tests/src/: lib.rs
ffi_tests/tests/: main.c  main.rs
ffi_tests/tests/c/: generated.h  main.c
ffi_tests/tests/csharp/: .gitignore  Tests.cs  Tests.csproj  Tests.sln  generated.cs
ffi_tests/tests/lua/: generated.lua  tests.lua
guide/: .gitignore  README.md  book.toml
guide/src/: SUMMARY.md  disclaimer.md  links.md  links.md.template  prerequisites.md  repr_c-types.md
guide/theme/: additional-css.css  book.css  header.hbs  index.hbs
introduction/: _.html  getting_started.html  quickstart.html
js_tests/: .gitignore  Cargo.toml  Makefile  build.rs  index.html
js_tests/src/: lib.rs
js_tests/tests/: main.mjs  node-entrypoint.js  node.js  tests.mjs  web-entrypoint.mjs
motivation/: _.html  repr-c-forall.html  traditional-ffi.html
napi-dispatcher/: Cargo.toml  dispatcher.rs  js_export_common.rs
napi-dispatcher/nodejs-derive/: Cargo.toml
napi-dispatcher/nodejs-derive/src/: lib.rs
napi-dispatcher/nodejs-derive/src/proc_macros/: Cargo.toml  mod.rs
napi-dispatcher/wasm/: Cargo.toml
napi-dispatcher/wasm/src/: env.rs  lib.rs  utils.rs  values.rs
napi-dispatcher/wasm/src/proc_macros/: Cargo.toml  mod.rs
nodejs_tests/: .gitignore  Cargo.toml  Makefile  build.rs  rust-toolchain.toml
nodejs_tests/src/: lib.rs
nodejs_tests/tests/: main.js
run-sh/: Cargo.toml  main.rs
rustdoc/: aliases.js  crates.js  help.html  search-index.js  settings.html  source-files.js
rustdoc/async_compat/: all.html  index.html  sidebar-items.js  struct.Compat.html  trait.CompatExt.html
rustdoc/cfg_if/: all.html  index.html  macro.cfg_if.html
rustdoc/ctor/: all.html  attr.ctor.html  attr.dtor.html  index.html
rustdoc/ext_trait/: all.html  attr.extension.html  index.html  sidebar-items.js
rustdoc/ext_trait_proc_macros/: all.html  attr.extension.html  index.html  sidebar-items.js
rustdoc/extension_traits/: all.html  attr.extension.html  index.html  sidebar-items.js
rustdoc/extern_c/: all.html  fn.extern_c.html  index.html  sidebar-items.js
rustdoc/futures/: all.html  index.html  macro.join.html  macro.pending.html  macro.pin_mut.html  macro.poll.html  macro.ready.html  macro.select.html  macro.select_biased.html  macro.stream_select.html  macro.try_join.html
rustdoc/futures_channel/: all.html  index.html
rustdoc/futures_core/: all.html  index.html  macro.ready.html
rustdoc/futures_executor/: all.html  fn.block_on.html  fn.block_on_stream.html  fn.enter.html  index.html  struct.BlockingStream.html  struct.Enter.html  struct.EnterError.html  struct.LocalPool.html  struct.LocalSpawner.html
rustdoc/futures_io/: all.html  index.html  trait.AsyncBufRead.html  trait.AsyncRead.html  trait.AsyncSeek.html  trait.AsyncWrite.html
rustdoc/futures_macro/: all.html  attr.test_internal.html  index.html  macro.join_internal.html  macro.select_biased_internal.html  macro.select_internal.html  macro.stream_select_internal.html  macro.try_join_internal.html
rustdoc/futures_sink/: all.html  index.html  trait.Sink.html
rustdoc/futures_task/: all.html  fn.noop_waker.html  fn.noop_waker_ref.html  fn.waker.html  fn.waker_ref.html  index.html  struct.FutureObj.html  struct.LocalFutureObj.html  struct.SpawnError.html  struct.WakerRef.html  trait.ArcWake.html  trait.LocalSpawn.html  trait.Spawn.html  trait.UnsafeFutureObj.html
rustdoc/futures_util/: all.html  index.html  (+9 more)
safer-ffi-build/: Cargo.toml  lib.rs
scripts/: build_docs.sh  cargo_publish.sh  change_version.sh  format.sh
simple-examples/: _.html  max.html  string_concat.html
src/: _lib.rs  arc.rs  boxed.rs  bytes.rs  c_char.rs  c_str.rs  char_p.rs  closure.rs  dyn_traits.rs  ffi_export.rs  headers.rs  libc.rs  option.rs  ptr.rs  shared_cstr.rs  slice.rs  str.rs  string.rs  tuple.rs  vec.rs
src/proc_macro/: Cargo.toml  _mod.rs  c_str.rs  derives.rs  ffi_export.rs  fn_def.rs  handle_fptr.rs  mod.rs  utils.rs
src/proc_macro/derives/: _mod.rs  handle_fptr.rs
src/proc_macro/derives/c_type/: _mod.rs  args.rs  js.rs  struct_.rs
src/proc_macro/derives/dyn_trait/: _mod.rs  args.rs  coercions.rs  receiver_types.rs  vtable_entry.rs
src/proc_macro/derives/repr_c/: _mod.rs  args.rs  enum_.rs  struct_.rs
src/proc_macro/dyn_trait/: _mod.rs  vtable_entry.rs
src/proc_macro/ffi_export/: _mod.rs  async_fn.rs  const_.rs  static_.rs  type_.rs
src/proc_macro/ffi_export/fn_/: args.rs  async_fn.rs  mod.rs
src/proc_macro/utils/: _mod.rs  extension_traits.rs  macros.rs  mb_file_expanded.rs  trait_impl_shenanigans.rs
tests/: dyn_traits.rs  ffi_integration.rs  layout_macros.rs  test_kotlin.rs
usage/: _.html  cargo-toml.html  custom-types.html  lib-rs.html
(+10691 files in other folders)
