[lib]
path = "src/_lib.rs"

[package]
name = "safer-ffi"
version = "0.1.0"  # Keep in sync
authors = ["Daniel Henry-Mantilla <daniel.henry.mantilla@gmail.com>"]
edition = "2021"

description = "Write safer FFI code in Rust without polluting it with unsafe code"
keywords = ["ffi", "no_std", "framework", "safety", "bindings"]
license = "MIT"
repository = "https://github.com/getditto/safer_ffi"

readme = "README.md"

[features]
default = [
    "std",
]

# Document under the following features: all but for debug or experimental.
docs = [
    "csharp-headers",
    "default",
    "nightly",
    "uninit",
]

nightly = []

alloc = []
std = [
    "alloc",
]

# Deprecated
proc_macros = []

async-fn = [
    "safer_ffi-proc_macros/async-fn",
]

debug_proc_macros = [
    "safer_ffi-proc_macros/verbose-expansions",
]

dyn-traits = [
    "safer_ffi-proc_macros/dyn-traits",
]

out-refs = [
    "uninit",
]

headers = [
    "inventory",
    "safer_ffi-proc_macros/headers",
    "std",
]
csharp-headers = [
    "headers",
]

node-js = [
    "async-fn",
    "headers",
    "inventory",
    # "napi",
    # "napi-derive",
    "safer_ffi-proc_macros/node-js",
    # For convenience
    "std",
]

[dev-dependencies]
macro_rules_attribute = "0.1.0"

[target.'cfg(not(target = "wasm32-unknown-unknown"))'.dependencies]
libc = { version = "0.2.66", default-features = false }

[dependencies]
paste = { package = "mini_paste", version = "0.1.*" }
log.version = "0.4.8"
log.optional = true
inventory.version = "0.1.6"
inventory.optional = true
scopeguard.version = "1.1.0"
unwind_safe.version = "0.1.0"
with_builtin_macros.version = "0.0.3"
macro_rules_attribute = "0.1.0"

[dependencies.napi]
package = "napi-dispatcher"
path = "napi-dispatcher"
# optional = true

# [dependencies.napi-derive]
# path = "napi-dispatcher/napi-nodejs-derive"
# optional = true
# version = "1.0.0"
# git = "https://github.com/getditto/napi-rs"
# branch = "ditto/closure-into-jsfunction"

[dependencies.safer_ffi-proc_macros]
path = "src/proc_macro"
version = "0.1.0-rc1"  # Keep in sync

[dependencies.uninit]
optional = true
# Since we are relying on internals of their `Out` reference,
# we pin the version.
version = "0.5.0"
default-features = false

[workspace]
members = [
    "src/proc_macro",
    "napi-dispatcher",
    "napi-dispatcher/nodejs-derive",
    "napi-dispatcher/nodejs-derive/src/proc_macros",
    "napi-dispatcher/wasm",
    "napi-dispatcher/wasm/src/proc_macros",
    "safer-ffi-build",
]

[package.metadata.docs.rs]
features = ["docs"]
