[lib]
path = "src/_lib.rs"

[package]
name = "safer-ffi"
version = "0.1.0"  # Keep in sync
authors = ["Daniel Henry-Mantilla <daniel.henry.mantilla@gmail.com>"]
edition = "2021"

description = "Write safer FFI code in Rust without polluting it with unsafe code"
keywords = ["ffi", "no_std", "framework", "safety", "bindings"]
license = "MIT"
repository = "https://github.com/getditto/safer_ffi"

readme = "README.md"

exclude = ["/guide"]

[features]
default = [
    "std",
]

# Document under the following features: all but for debug or experimental.
docs = [
    "csharp-headers",
    "default",
    "nightly",
    "uninit",
]

nightly = []

alloc = []
std = [
    "alloc",
]

proc_macros = [] # Deprecated

async-fn = [
    "safer_ffi-proc_macros/async-fn",
]

debug_proc_macros = [
    "safer_ffi-proc_macros/verbose-expansions",
]

dyn-traits = [
    "safer_ffi-proc_macros/dyn-traits",
]

futures = [
    "dep:futures",
    "dyn-traits",
]

tokio = [
    "dep:tokio",
    "futures",
]

out-refs = [
    "uninit",
]

headers = [
    "inventory",
    "safer_ffi-proc_macros/headers",
    "std",
]
csharp-headers = [
    "headers",
]
# Tweak the generated `.h` ever so slightly.
c-headers-with-fn-style = [
    "headers",
]

js = [
    "async-fn",
    "headers",
    "inventory",
    "safer_ffi-proc_macros/js",
    # For convenience
    "std",
]

inventory-0-3-1 = [
    "dep:inventory-0-3-1",
    "safer_ffi-proc_macros/inventory-0-3-1",
]

[dev-dependencies]
macro_rules_attribute = "0.1.0"
safer-ffi.path = "."
safer-ffi.features = [
    "async-fn",
    "csharp-headers",
    "dyn-traits",
    "tokio",
]

[target.'cfg(not(target = "wasm32-unknown-unknown"))'.dependencies]
libc = { version = "0.2.66", default-features = false }

[dependencies]
futures.version = "0.3.24"
futures.optional = true
tokio.version = "1.21.2"
tokio.features = [
    "rt",
]
tokio.optional = true

paste = { package = "mini_paste", version = "0.1.*" }
log.version = "0.4.8"
log.optional = true
inventory.version = "0.1.6"
inventory.optional = true
scopeguard.version = "1.1.0"
unwind_safe.version = "0.1.0"
with_builtin_macros.version = "0.0.3"
macro_rules_attribute = "0.1.0"


[dependencies.inventory-0-3-1]
package = "inventory"
version = "0.3.1"
optional = true

[dependencies.napi]
package = "napi-dispatcher"
path = "napi-dispatcher"

[dependencies.safer_ffi-proc_macros]
path = "src/proc_macro"
version = "0.1.0-rc1"  # Keep in sync

[dependencies.uninit]
optional = true
version = "0.5.0"
default-features = false

[workspace]
members = [
    "src/proc_macro",
    "napi-dispatcher",
    "napi-dispatcher/nodejs-derive",
    "napi-dispatcher/nodejs-derive/src/proc_macros",
    "napi-dispatcher/wasm",
    "napi-dispatcher/wasm/src/proc_macros",
    "safer-ffi-build",
]

[package.metadata.docs.rs]
features = ["docs"]

[[test]]
name = "ffi-tests"
path = "ffi_tests/src/lib.rs"
