[lib]
crate-type = [
    "rlib", # cargo test
    "staticlib", # C test (os X)
    "cdylib", # CSharp test
]

[package]
name = "ffi_tests"
version = "0.1.0"
authors = ["Daniel Henry-Mantilla <daniel.henry.mantilla@gmail.com>"]
edition = "2018"

[dependencies]
safer-ffi = { path = "..", features = ["proc_macros"] }

[features]
generate-headers = ["safer-ffi/csharp-headers"]

# [dev-dependencies]
# cc = "1.0.50"

[profile.dev]
panic = "unwind"

[workspace]
