[lib]
crate-type = [
    "lib", # cargo test
    "staticlib", # C test (os X)
    "cdylib", # CSharp test
]

[package]
name = "ffi_tests"
version = "0.1.0"
authors = ["Daniel Henry-Mantilla <daniel.henry.mantilla@gmail.com>"]
edition = "2018"

[dependencies]

[dependencies.safer-ffi]
path = ".."
features = [
    "async-fn",
    "futures",
]

[features]
generate-headers = ["safer-ffi/headers"]

[profile.dev]
panic = "unwind"

[workspace]

[dev-dependencies]
scopeguard = "1.1.0"
