[lib]
path = "dispatcher.rs"

[package]
name = "napi-dispatcher"
version = "0.1.0"
authors = [
    "Daniel Henry Mantilla <daniel.henry.mantilla@gmail.com>",
]
edition = "2018"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
napi.version = "1.1.3"
napi.features = ["napi6", "tokio_rt"]
# We need some napi enhancements featured in our fork, while waiting for those
# to be merged upstream (we did get the `Result`-less `ThreadsafeFunction`
# (c.f. 7108cc0f762d8cea3b2923b3bc529e4361557b30) to be merged but not released,
# but now we are waiting for 4aba1599585eb763cb64a38ed6ccf61f2336e205).
napi.git = "https://github.com/getditto/napi-rs"
napi.branch = "ditto/closure-into-jsfunction"

napi-derive.path = "nodejs-derive"
napi-derive.package = "napi-dispatcher-nodejs-derive"

[target.'cfg(target_arch = "wasm32")'.dependencies]
napi-wasm.path = "wasm"
napi-wasm.package = "napi-dispatcher-wasm"
