[lib]
crate-type = ["cdylib"]

[package]
name = "nodejs_tests"
version = "0.1.0"
authors = ["Daniel Henry-Mantilla <daniel.henry.mantilla@gmail.com>"]
edition = "2018"

[dependencies]
safer-ffi = { path = "..", features = ["node-js"] }

[workspace]

[build-dependencies]
safer-ffi = { path = "..", features = ["node-js"] }
