[lib]
path = "mod.rs"
proc-macro = true

[package]
name = "safer_ffi-proc_macro"
# Keep in sync with `/Cargo.toml`
version = "0.0.8"
authors = ["Daniel Henry-Mantilla <daniel.henry.mantilla@gmail.com>"]
edition = "2018"

description = "Procedural macro internals of `::safer_ffi`"
license = "MIT"

[dependencies]
proc-macro2 = { version = "1.0", optional = true }
quote = { version = "1.0", optional = true }
syn = { version = "1.0", features = ["full"], optional = true }
proc-macro-hack = { version = "0.5.15", optional = true }

[features]
headers = []
proc_macros = ["proc-macro2", "proc-macro-hack", "quote", "syn"]
verbose-expansions = []
