[lib]
path = "_mod.rs"
proc-macro = true

[package]
name = "safer_ffi-proc_macros"
version = "0.1.1"  # Keep in sync
authors = ["Daniel Henry-Mantilla <daniel.henry.mantilla@gmail.com>"]
edition = "2021"

description = "Procedural macro internals of `::safer_ffi`"
license = "MIT"

[dependencies]
proc-macro2.version = "1.0"
quote.version = "1.0"

# prettyplease.optional = true
prettyplease.version = "0.1.7"
macro_rules_attribute = "0.1.0"

[dependencies.syn]
version = "1.0"
features = [
    # "extra-traits",
    "full",
    "visit-mut",
]

[features]
async-fn = []
dyn-traits = []
headers = []
js = [
    "async-fn",
]
verbose-expansions = [
    # "prettyplease",
]

inventory-0-3-1 = []
